# calsync

./: .gitignore  README.md  apple_calendar.py  cli.py  event_map.toml  example.settings.toml  google_calendar.py  pyproject.toml  settings_utils.py  sync.py  sync_state.toml
.github/instructions/: python-package-management.instructions.md
